--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
+cache: pip
 install:
   - pip install -r requirements.txt
-  - cd data && sh download_data.sh
+  - cd data && sh download_data.sh && cd ..
 script: python main.py
