--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,7 @@ cache: pip
 install:
   - pip install -r requirements.txt
   - cd data && sh download_data.sh && cd ..
-script: python main.py
+script: 
+  - coverage erase
+  - coverage run -m pytest
+  - find . -name '*.py' -exec coverage report -m {} \;
