--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+dist: bionic
 python:
   - "3.6"
   - "3.7"
@@ -15,4 +16,4 @@ script:
   - find . -name '*.py' -exec coverage report -m {} \;
   - find . -name '*.py' -exec pylint --output-format=text {} \;
 after_success:
-  - codecov
+  - bash <(curl -s https://codecov.io/bash)
